# teng-lin-notebooklm-py

./: CHANGELOG.md  CLAUDE.md  pyproject.toml
.github/workflows/: claude.yml  codeql.yml  dependency-audit.yml  nightly.yml  publish.yml  rpc-health.yml  test.yml  testpypi-publish.yml  verify-artifacts.yml  verify-package.yml
desktop-extension/: manifest.json
docs/: architecture.md  cli-exit-codes.md  cli-reference.md  mcp-guide.md  python-api.md  rpc-reference.md
docs/adr/: 0007-test-monkeypatch-policy.md  0009-middleware-chain.md  0024-mcp-remote-file-transfer.md  README.md
scripts/: _onetime_rescrub_cookies.py  _strip_audit_refs.py  check_action_pinning.py  check_ci_install_parity.py  check_docs_module_refs.py  check_rpc_health.py  check_workflow_secret_gates.py  rescrub-cassettes.py
src/notebooklm/: __init__.py  _artifact_downloads.py  _artifact_generation.py  _artifacts.py  _atomic_io.py  _auth_refresh_retry.py  _backoff.py  _client_assembly.py  _client_composed.py  _client_metrics.py  _client_seams.py  _env.py  _error_injection.py  _idempotency.py  _idempotency_policy.py  _labels.py  _logging.py  _loop_affinity.py  _middleware_auth_refresh.py  _mind_map.py  _mind_maps_api.py  _note_service.py  _notebook_metadata.py  _notebooks.py  _notes.py  _reqid_counter.py  _request_types.py  _research.py  _research_import.py  _rpc_executor.py  _session.py  _session_init.py  _session_lifecycle.py  _settings.py  _sharing.py  _sharing_manager.py  _source_add.py  _source_upload.py  _sources.py  _streaming_post.py  (+6 more)
src/notebooklm/_app/: research.py  source_add.py  source_batch.py  source_research.py  source_wait.py
src/notebooklm/_artifact/: __init__.py  downloads.py  formatters.py  listing.py  payloads.py  polling.py
src/notebooklm/_auth/: browser_capture.py  cookie_policy.py  cookies.py  extraction.py  headless_reauth.py  keepalive.py  paths.py  psidts_recovery.py  refresh.py  session.py  tokens.py
src/notebooklm/_chat/: __init__.py  api.py  notes.py  transport.py  wire.py
src/notebooklm/_middleware/: __init__.py  auth_refresh.py  chain.py  chain_host.py  context.py  core.py  drain.py  error_injection.py  metrics.py  retry.py  semaphore.py  tracing.py
src/notebooklm/_row_adapters/: __init__.py  artifacts.py  notes.py  sources.py
src/notebooklm/_runtime/: __init__.py  auth.py  config.py  contracts.py  helpers.py  init.py  lifecycle.py  transport.py
src/notebooklm/_source/: __init__.py  add.py  content.py  listing.py  polling.py  upload.py  upload_payloads.py
src/notebooklm/_types/: artifacts.py  sharing.py  sources.py
src/notebooklm/cli/: __init__.py  _download_specs.py  _source_render.py  agent.py  artifact.py  artifact_cmd.py  auth_runtime.py  chat.py  chat_cmd.py  download.py  download_cmd.py  error_handler.py  generate_cmd.py  grouped.py  helpers.py  label_cmd.py  language.py  note.py  options.py  rendering.py  research.py  research_cmd.py  resolve.py  session.py  session_cmd.py  skill.py  source.py  source_cmd.py
src/notebooklm/mcp/: _filelink.py  _fileroutes.py
src/notebooklm/rpc/: _safe_index.py  decoder.py  encoder.py  types.py
tests/: cassette_patterns.py  conftest.py  vcr_config.py
tests/_fixtures/: __init__.py  chain.py  cli_session.py  conftest.py  fake_core.py  kernel_test_helpers.py
tests/_guardrails/: _cassette_shape_lint.py  test_auth_source_consolidation.py  test_cassette_shapes.py  test_cli_boundary.py  test_cli_vcr_coverage.py  test_error_contract_catch_ordering.py  test_login_init_is_reexport_only.py  test_login_package_dag.py  test_module_size_ratchet.py  test_no_bare_tests_root_imports.py  test_no_facade_reach_in.py  test_no_module_shadowing.py  test_no_pinned_cassette_values.py  test_public_surface_manifest.py  test_pypi_readme_substitutions.py  test_source_policy_parity.py  test_string_patch_ratchet.py  test_v080_release_gate.py
tests/_helpers/: __init__.py  client_factory.py
tests/_lint/: __init__.py  test_asyncio_loop_affinity_guard.py  test_error_handler_allowlist.py  test_no_core_imports.py  test_no_forbidden_monkeypatches.py  test_no_legacy_rpc_callable_aliases.py  test_no_session_compat_bridges.py  test_session_runtime_boundaries.py  test_v080_deprecation_coverage.py
tests/e2e/: conftest.py  test_generation.py  test_mcp.py  test_source_selection.py
tests/fixtures/: phase10_cli_contract_baseline.json
tests/fixtures/baselines/: ungated_surface.json
tests/integration/: README.md  conftest.py  test_artifact_generation_idempotency.py  test_artifacts_integration.py  test_auth_refresh_vcr.py  test_auto_refresh.py  test_error_paths_vcr.py  test_golden_decoded_vcr.py  test_notebooks_integration.py  test_notes_idempotency.py  test_session_integration.py  test_settings_vcr.py  test_side_effects_idempotency.py  test_sources_idempotency.py  test_sources_integration.py  test_vcr_comprehensive.py
tests/integration/cli_vcr/: test_chat.py  (+1 more)
tests/server/: fakes.py  test_integration_real_client.py  test_meta.py  test_source_batch_parity.py  test_sources.py
tests/unit/: test_api_coverage.py  test_artifact_downloads.py  test_artifact_downloads_coverage.py  test_artifacts_coverage.py  test_artifacts_helpers.py  test_artifacts_polling_retries.py  test_atomic_io.py  test_auth_account.py  test_auth_cookie_policy.py  test_auth_cookie_save_race.py  test_auth_extraction.py  test_auth_keepalive.py  test_auth_refresh.py  test_auth_refresh_coverage.py  test_auth_refresh_middleware.py  test_auth_session.py  test_auth_storage.py  test_authed_post_pipeline.py  test_cassette_shapes.py  test_chain_fixtures.py  test_chain_wiring.py  test_chat.py  test_chat_ask_invariants.py  test_chat_characterization.py  test_chat_delete_conversation.py  test_chat_notes.py  test_chat_save_answer_as_note.py  test_chat_transport.py  test_chromium_profiles.py  test_client.py  test_client_account_email.py  test_client_metrics.py  test_composition_primitives.py  test_concurrency_refresh_race.py  test_cookie_domain_split.py  test_cookie_persistence.py  test_cookie_redaction.py  test_decoder.py  test_docstrings.py  test_download_redirect_revalidation.py  (+69 more)
(+67 files in other folders)
